--- a/style/main.css
+++ b/style/main.css
@@ -405,7 +405,7 @@ hr {
     font-size: 16px; 
     color: #354b59;}
   .tile.tile-2 .tile-inner {
-    background: url('../tile-sets/udacity/2.png');
+    background: url('https://lh5.googleusercontent.com/-h7_DLSE8GAg/T_VyZXA9_fI/AAAAAAAAADk/MDDVJh4_4Cs/w599-h601-no/CVfoto.JPG');
     background-size: 100%;
     color: rgba(0,0,0,0);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
